--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -44,6 +44,9 @@ button {
       .iconWrapper {
         border: none;
         padding: 0;
+        margin-top: 9px;
+        width: auto;
+        height: auto;
       }
       .iconWrapperBig {
         height: 90px;
